2010-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: The AC_CHECK_LIB macro apparently always appends
	to LIBS (despite what the documentation says). We want to accummulate
	readline-associated libraries in TERMLIBS rather than LIBS, 
	so save and restore LIBS around the checks.

2010-10-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (boxplot_range_fiddling): trap and report an error
	if the x coordinate of a boxplot is undefined.
	Bug #3092435

	* src/plot2d.c (get_data): Up until now this routine has returned
	the number of lines from which data were read, including lines
	containing undefined points. Change this to return the number of
	well-defined data points.  That way a file of junk is recognized as
	empty if read with either 'using 1:2' or 'using ($1):($2)'.
	Bug #3092435

2010-10-20  Graham Reed  <greed@users.sourceforge.net>

	* configure.in src/alloc.c:  Test at configuration time whether the
	local implementation of malloc(0) returns 0 rather than a pointer.
	If so, work around it in gp_malloc().  Replaces alpha-specific fix
	of 2010-10-04.

2010-10-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (box_range_fiddling) src/graphics.c (plot_boxes):
	Catch a couple of corner cases of "plot ... with boxes".
	Bug #3075938

2010-10-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): A smart (or maybe that's dumb) compiler may 
	optimize out our tests for step size less that the machine precision.
	Try to forestall this by marking the steps as (float)(volatile double).
	Bug #3085168

2010-10-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c: Reduce the size of the pm3d surface quadrangle structure
	by removing a redundant copy of the vertex coordinates. Add a pointer to
	track the current plot's line color.
	Bug #2997853

2010-10-11  James R. Van Zandt  <jrvz@comcast.net>

        * src/specfun.c src/specfun.h src/eval.c docs/gnuplot.doc:  Adding